# kerix

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: ProjectUtility.cmake
kerix/: CMakeLists.txt  compiled.cpp  demo.cpp  event.hpp  kerix.cpp  kerix.hpp  signal.hpp  thunk.hpp  types.hpp
tools/: add_copyright.py
